src/LinkAPI.h




#    define VECTOR_LENGTH 3

#    define MAX_IDENTITY_LENGTH 256
#    define MAX_CONTEXT_LENGTH 256
#    define MAX_NAME_LENGTH 256
#    define MAX_DESCRIPTION_LENGTH 2048

typedef struct LinkedMem {
    NATIVE_UINT32 uiVersion;
    NATIVE_DWORD uiTick;
    float fAvatarPosition[VECTOR_LENGTH];
    float fAvatarFront[VECTOR_LENGTH];
    float fAvatarTop[VECTOR_LENGTH];
    wchar_t name[MAX_NAME_LENGTH];
    float fCameraPosition[VECTOR_LENGTH];
    float fCameraFront[VECTOR_LENGTH];
    float fCameraTop[VECTOR_LENGTH];
    wchar_t identity[MAX_IDENTITY_LENGTH];
    NATIVE_UINT32 context_len;
    unsigned char context[MAX_CONTEXT_LENGTH];
    wchar_t description[MAX_DESCRIPTION_LENGTH];
} LinkedMem;


/**
 * error codes hinting at the root cause of a failure
 */
typedef enum ErrorCode {
    /** no error */
    ERROR_CODE_NO_ERROR = 0,
    /** win32 specific: OpenFileMappingW failed to return a handle */
    ERROR_CODE_WIN32_NO_HANDLE = 1,
    /** win32 specific: MapViewOfFile failed to return a structure */
    ERROR_CODE_WIN32_NO_STRUCTURE = 2,
    /** unix specific: shm_open returned a negative integer */
    ERROR_CODE_UNIX_NO_HANDLE = 3,
    /** unix specific: mmap failed to return a structure */
    ERROR_CODE_UNIX_NO_STRUCTURE = 4,
    /** shared memory was not initialized */
    ERROR_CODE_NO_MEMORY_WAS_INITIALIZED = 5,
    /** the provided context length was out of bounds */
    ERROR_CODE_CONTEXT_LENGTH_EXCEEDED = 6
} ErrorCode;


/**
 * initialize the linked memory
 * and set the name and description
 *
 * it corresponds to initMumble() defined here: http://mumble.sourceforge.net/Link
 * but also sets the name and description as this should only needed to be
 * set once
 *
 * @param name	the display name of the application which links with mumble (i.e. L"TestLink")
 * @param description	a text stating the purpose of this link
 * @param uiVersion	no description available (this should usually be set to 2)
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode initialize(wchar_t name[MAX_NAME_LENGTH],
        wchar_t description[MAX_DESCRIPTION_LENGTH],
        NATIVE_UINT32 uiVersion);


/**
 * forcefully unlinks the plugin instantly
 *
 * this function directly circumvents the timeout wait of the link plugin
 *
 * this effect is undone when calling an update method or <code>initialize(...)</code>
 */
LINKAPI_API
void doUnlink();


/**
 * notifies the plugin that the data is up-to-date update...-functions call
 * this method at the end
 * 
 * this is to prevent a timeout which causes the plugin to automatically unlink
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode commit();


/**
 * sets and commits the identity
 *
 * Notice: The identity does not need to be updated every single frame. It
 * shouldn't change more than a few times per second if at all during a game.
 *
 *      see <code>setIdentity(...)</code> for details
 *
 * @param identity	unique id of the user in a given context
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode updateIdentity(wchar_t identity[MAX_IDENTITY_LENGTH]);


/**
 * get the client's identity
 *      see <code>setIdentity(...)</code> for details
 * @return the client's identity
 */
LINKAPI_API
wchar_t* getIdentity();


/**
 * set the identity only
 *
 * Notice: The identity does not need to be updated every single frame. It
 * shouldn't change more than a few times per second if at all during a game.
 *
 * Identity should contain a string which uniquely identifies the player in
 * the given context. This is usually satisfied by the in-game player name
 * or the players ID (player-/connection-ID on the server or a global ID).
 *
 * Additionally the identity can contain any additional information about
 * the player that might be interesting for the mumble server.
 *
 * We recommend using an easily parseable format like JSON or CSV for
 * encoding the information but this is up to the game. Remember that the
 * link structures only allow for limited characters of identity data.
 *
 * @param identity	unique id of the user in a given context
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setIdentity(wchar_t identity[MAX_IDENTITY_LENGTH]);


/**
 * sets and commits the context
 *
 * Notice: The context does not need to be updated every single frame. It
 * shouldn't change more than a few times per second if at all during a game.
 *
 *      see <code>setContext(...)</code> for details
 *
 * @param context	a generic context
 * @param context_len	the length of the context (number of array elements)
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode updateContext(unsigned char context[MAX_CONTEXT_LENGTH],
        NATIVE_UINT32 context_len);


/**
 * getter for the client's context
 *      see <code>setContext(...)</code> for details
 * @return the client's context
 */
LINKAPI_API
unsigned char * getContext();


/**
 * sets the context
 *
 * Notice: The context does not need to be updated every single frame. It
 * shouldn't change more than a few times per second if at all during a game.
 *
 * The context string is used to determine which users on a Mumble server
 * should hear each other positionally. If context between two mumble user
 * does not match the positional audio data is stripped server-side and
 * voice will be received as non-positional.
 *
 * Accordingly the context should only match for players on the same server
 * in the same game on the same map. Whether to include things like team in
 * this string depends on the game itself. When in doubt err on the side of
 * including less. This gives more flexibility later on.
 *
 * @param context	a generic context
 * @param context_len	the length of the context (number of array elements)
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setContext(unsigned char context[], NATIVE_UINT32 context_len);

LINKAPI_API
NATIVE_UINT32 getContextLen();


/**
 * sets and commits the identity AND context
 *
 * Notice: The identity and/or context does not need to be updated every
 * single frame. It shouldn't change more than a few times per second if at
 * all during a game.
 *
 * see <code>setIdentity(..)</code> and <code>setContext(..)</code> for detailed information
 *
 * @param identity	unique id of the user
 * @param context	a generic context
 * @param context_len	the length of the context (number of active array
 *		elements)
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode updateIdentityAndContext(
        wchar_t identity[MAX_IDENTITY_LENGTH],
        unsigned char context[MAX_CONTEXT_LENGTH],
        NATIVE_UINT32 context_len);


/**
 * sets the identity AND context
 *
 * Notice: The identity and/or context does not need to be updated every
 * single frame. It shouldn't change more than a few times per second if at
 * all during a game.
 *
 * see <code>setIdentity(..)</code> and <code>setContext(..)</code> for detailed informations
 *
 * @param identity	unique id of the user
 * @param context	a generic context
 * @param context_len	the length of the context (number of active array
 *		elements)
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setIdentityAndContext(wchar_t identity[], unsigned char context[], NATIVE_UINT32 context_len);


/**
 * sets and commits the name
 *
 * Notice: This does not need to be updated every single frame. It shouldn't
 * change at all during a game.
 *
 *      see <code>setName(...)</code> for details
 *
 * @param name	the display name of the application which links with mumble (i.e. L"TestLink")
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode updateName(wchar_t name[MAX_NAME_LENGTH]);

LINKAPI_API
wchar_t* getName();


/**
 * sets the name only
 *
 * Notice: This does not need to be updated every single frame. It shouldn't
 * change at all during a game.
 *
 * this name is shown in the mumble interface to indicate which plugin's
 * positional audio is being used (i.e. used for the "XXX linked." message
 * in the mumble log)
 *
 * @param name	the display name of the application which links with mumble (i.e. L"TestLink")
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setName(wchar_t name[MAX_NAME_LENGTH]);


/**
 * sets and commits the description
 *
 * Notice: This does not need to be updated every single frame. It shouldn't
 * change at all during a game.
 *
 *      see <code>setDescription(...)</code> for details
 *
 * @param description	a text stating the purpose of this link
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode updateDescription(wchar_t description[MAX_DESCRIPTION_LENGTH]);

LINKAPI_API
wchar_t* getDescription();